--- a/releases.json
+++ b/releases.json
@@ -1,5 +1,13 @@
 [
     {
+        "version": "0.1.2",
+        "downloadUrl": "https://github.com/composedcreative/craft-expandedsearch/archive/0.1.2.zip",
+        "date": "2016-06-02T17:50:00Z",
+        "notes": [
+            "[Fixed] License definition in composer.json"
+        ]
+    },
+    {
         "version": "0.1.1",
         "downloadUrl": "https://github.com/composedcreative/craft-expandedsearch/archive/0.1.1.zip",
         "date": "2016-06-02T17:42:00Z",
